--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -302,6 +302,7 @@
      "plugin:react/all",
      "plugin:import/errors",
      "plugin:import/warnings",
+     "plugin:import/typescript",
      "plugin:@typescript-eslint/recommended"
    ],
    "plugins": [
