--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "camelcase",
+        "CECE",
+        "cwrp",
         "jsxdev",
         "linebreak",
         "multilines",
