--- a/package.json
+++ b/package.json
@@ -84,12 +84,16 @@
     "@typescript-eslint/parser": "^5.11.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "copy": "^0.3.2",
     "css-loader": "^6.6.0",
+    "depcheck": "^1.4.3",
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.28.0",
     "jest-cli": "^27.5.1",
+    "npm-check": "^5.9.2",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
     "webpack": "^5.68.0"
   },
   "dependencies": {
@@ -97,11 +101,8 @@
     "@sentry/browser": "^6.17.7",
     "big.js": "^6.1.1",
     "classnames": "^2.3.1",
-    "copy": "^0.3.2",
-    "depcheck": "^1.4.3",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.29.1",
-    "npm-check": "^5.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notification-system-redux2": "^3.0.4",
