--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "exclude": ["./lib/*", "./node_modules/*", "./wiki/*", ".vscode/*"],
-  "include": ["./src/*", "./index.d.ts", "./types.d.ts", "custom"],
   "compilerOptions": {
     "allowJs": true,
     "noEmit": false,
@@ -14,13 +13,14 @@
     "outDir": "./lib",
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "strict": true /* Enable all strict type-checking options. */,
-    "target": "es6",
+    "target": "es5",
     "declaration": true,
-    // Ensure that Babel can safely transpile files in the TypeScript project
     "baseUrl": "./",
-    "paths": {
-        "custom": [ "custom" ],
-      },
+      "paths": {
+        "react-loadable":["node_modules/@docusaurus/react-loadable"]
+      }
+    // Ensure that Babel can safely transpile files in the TypeScript project
+ 
     /* Additional Checks */
     /* Advanced Options */
     /* Basic Options */
