--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "version": "17.0.18",
   "name": "x25",
   "description": "x25",
+  "types": "./dist/index.d.ts",
+  "main": "./dist/index.js",
   "scripts": {
-    "load": "npm run intern-pre && cd dist && npm publish",
-    "load-beta": "npm run intern-pre && cd dist && npm publish --tag beta",
+    "load": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish",
+    "load-beta": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish --tag beta",
     "eslint": "eslint --ext .tsx,.ts src --fix",
-    "intern-pre": "npm run intern-test && npm run eslint && npm run intern-clean && npm run intern-build && npm run intern-copy",
+    "intern-pre": "npm run intern-test && npm run eslint && npm run intern-clean && npm run intern-build",
     "intern-build-scss": "node-sass --output-style compressed src -o dist",
-    "intern-build-babel": "babel src --out-dir dist",
-    "intern-copy": "copy package.json dist",
-    "intern-build": "npm run intern-build-scss && npm run intern-build-babel",
+    "intern-copy": " copy package.json dist",
+    "intern-build": "npm run intern-build-scss",
     "intern-clean": "rimraf dist dist",
     "intern-test": "jest",
     "check": "npm run depcheck & npm run check:npm-check",
     "check:npm-check": "npm-check -u -i babel-jest -i jest --specials=bin,eslint,babel,webpack",
     "depcheck": "depcheck --ignores=webpack-cli,@hot-loader/react-dom --ignore-patterns=server,node_modules,tmp,fonts",
     "check:global": "npm-check -gu",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "ts": "tsc --declaration"
   },
   "repository": {
     "type": "git",
@@ -58,8 +60,7 @@
         ]
       }
     }
-  }
-  ,
+  },
   "engines": {
     "node": ">= 16.0.0"
   },
@@ -108,9 +109,13 @@
     "@sentry/browser": "^6.17.7",
     "big.js": "^6.1.1",
     "classnames": "^2.3.1",
+    "copy-dir": "^1.3.0",
+    "copyfiles": "^2.4.1",
+    "cp": "^0.2.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "^27.5.1",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notification-system-redux2": "^3.0.4",
