--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "exclude": ["./lib/*", "./node_modules/*", "./wiki/*", ".vscode/*"],
+  "exclude": ["./lib/*", "./node_modules/*", "./wiki/*", ".vscode/*", "conf"],
+  "include": ["./src/*","./index.d.ts", "./node_modules"],
   "compilerOptions": {
     "allowJs": true,
     "noEmit": false,
@@ -10,19 +11,20 @@
     "module": "commonjs",
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "noImplicitAny": true,
-    "outDir": "./lib",
+    "outDir": "dist",
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "strict": true /* Enable all strict type-checking options. */,
-    "target": "es5",
+    "target": "es5",    
+    "rootDirs": ["src", ""],
     "declaration": true,
-    "baseUrl": "./",
-      "paths": {
+    "baseUrl": "src",
+    "paths": {
         "react-loadable":["node_modules/@docusaurus/react-loadable"]
-      },
-      "types": [
+    },
+    "types": [
       "jest",
       "jest-immutable-matchers"
-      ]
+    ]
     // Ensure that Babel can safely transpile files in the TypeScript project
  
     /* Additional Checks */
