--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.1.7",
+  "version": "17.1.8",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -114,7 +114,7 @@
     "react-final-form": "^6.5.9",
     "react-notification-system-redux2": "^3.0.4",
     "react-redux": "^8.0.1",
-    "reactstrap": "^9.0.1",
+    "react-simple-tooltip": "^2.6.3",
     "redux": "^4.2.0",
     "redux-injector": "^0.1.0",
     "reselect": "^4.1.5",
