--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "version": "17.2.9-beta",
+  "version": "17.2.14",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "scripts": {
-    "load": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish --tag beta",
+    "load": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish",
     "load-beta": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish --tag beta",
     "eslint": "eslint --ext .tsx,.ts src --fix",
     "intern-pre": "npm run eslint && npm run intern-clean && npm run intern-build",
