--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.2.30",
+  "version": "17.2.31",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -119,6 +119,7 @@
     "redux": "^4.2.0",
     "redux-injector": "^0.1.0",
     "reselect": "^4.1.6",
-    "superagent": "^8.0.0"
+    "superagent": "^8.0.0",
+    "typescript": "^4.8.4"
   }
 }
