--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.3.24",
+  "version": "17.3.31",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -106,6 +106,7 @@
     "@docusaurus/react-loadable": "^5.5.2",
     "@reduxjs/toolkit": "^1.8.6",
     "classnames": "^2.3.2",
+    "final-form": "^4.20.9",
     "immutable": "^4.1.0",
     "jest": "^27.5.1",
     "moment": "^2.29.4",
