--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.4.18",
+  "version": "17.4.41",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -62,7 +62,7 @@
     }
   },
   "engines": {
-    "node": "^17.0.0"
+    "node": ">=18"
   },
   "jest": {
     "transform": {
