--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "intern-clean": "rimraf dist dist",
     "intern-test": "vitest",
     "check": "node script/check & npm run depcheck & npm run check:npm-check",
-    "check:npm-check": "npm-check -u -i \"{}\" --specials=bin,eslint,babel,webpack",
+    "check:npm-check": "npm-check -u -i \"{rc-tooltip,react,react-dom}\" --specials=bin,eslint,babel,webpack",
     "depcheck": "depcheck --ignores=@docusaurus/react-loadable,webpack-cli,@hot-loader/react-dom --ignore-patterns=server,node_modules,tmp,fonts",
     "check:global": "npm-check -gu",
     "ts:check": "tsc --noEmit",
@@ -82,8 +82,8 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@types/superagent": "^4.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "copy": "^0.3.2",
     "css-loader": "^6.8.1",
@@ -92,11 +92,11 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-react": "^7.33.2",
-    "node-sass": "^7.0.3",
+    "node-sass": "^9.0.0",
     "npm-check": "^6.0.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
-    "typescript": "^4.8.4",
+    "typescript": "^5.3.2",
     "webpack": "^5.89.0"
   },
   "overrides": {
