--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "17.5.11",
+  "version": "17.5.13",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
@@ -8,9 +8,10 @@
     "load-beta": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish --tag beta",
     "eslint": "eslint --ext .tsx,.ts src --fix",
     "intern-pre": "npm run eslint && npm run intern-clean && npm run intern-build",
+    "knip": "knip --include-libs",
     "intern-build-scss": "node-sass --output-style compressed src -o dist",
     "intern-copy": " copy package.json dist",
-    "lint": "npm run ts:check & npm run eslint",
+    "lint": "npm run knip & npm run ts:check & npm run eslint",
     "intern-build": "npm run intern-build-scss",
     "intern-clean": "rimraf dist dist",
     "intern-test": "vitest",
@@ -111,6 +112,7 @@
     "classnames": "^2.3.2",
     "final-form": "^4.20.10",
     "immutable": "^4.3.4",
+    "knip": "^5.36.2",
     "moment": "^2.29.4",
     "rc-tooltip": "^5.3.1",
     "react": "^17.0.2",
