--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "knip": "knip --include-libs",
     "intern-build-scss": "node-sass --output-style compressed src -o dist",
     "intern-copy": " copy package.json dist",
-    "lint": "npm run knip & npm run ts:check & npm run eslint",
+    "lint": "npm run ts:check & npm run eslint",
     "intern-build": "npm run intern-build-scss",
     "intern-clean": "rimraf dist dist",
     "intern-test": "vitest",
@@ -83,7 +83,7 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@types/superagent": "^4.1.24",
+    "@types/superagent": "^8.1.9",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -117,10 +117,13 @@
     "rc-tooltip": "^5.3.1",
     "react": "^17.0.2",
     "react-final-form": "^6.5.9",
+    "react-immutable-form": "^1.1.4",
+    "react-immutable-form-with-bootstrap": "^1.0.5",
     "react-notification-system-redux2": "^3.0.4",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "reselect": "^4.1.8",
+    "rimraf": "^3.0.2",
     "superagent": "^8.1.2",
     "vitest": "^1.4.0",
     "x25": "^17.4.70"
