--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "version": "17.5.13",
+  "version": "17.6.1",
   "name": "x25",
   "description": "x25",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "load": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish",
+    "load": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm run clean-dist && npm publish",
     "load-beta": "npm run intern-pre && cd dist && npm run ts && npm run intern-copy && npm publish --tag beta",
     "eslint": "eslint --ext .tsx,.ts src --fix",
     "intern-pre": "npm run eslint && npm run intern-clean && npm run intern-build",
@@ -19,6 +19,7 @@
     "check:npm-check": "npm-check -u -i \"{rc-tooltip,react,react-dom}\" --specials=bin,eslint,babel,webpack",
     "depcheck": "depcheck --ignores=@docusaurus/react-loadable,webpack-cli,@hot-loader/react-dom --ignore-patterns=server,node_modules,tmp,fonts",
     "check:global": "npm-check -gu",
+    "clean-dist": "trash \"dist/**/*.test.*\"",
     "ts:check": "tsc --noEmit",
     "ts": "tsc --declaration"
   },
@@ -97,12 +98,16 @@
     "node-sass": "^9.0.0",
     "npm-check": "^6.0.1",
     "style-loader": "^3.3.3",
+    "trash-cli": "^6.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0"
   },
   "overrides": {
     "rc-tooltip": {
+      "react": "$react"
+    },
+    "react-datepicker": {
       "react": "$react"
     }
   },
@@ -118,7 +123,7 @@
     "react": "^17.0.2",
     "react-final-form": "^6.5.9",
     "react-immutable-form": "^1.1.4",
-    "react-immutable-form-with-bootstrap": "^1.0.5",
+    "react-immutable-form-with-bootstrap": "^1.0.6",
     "react-notification-system-redux2": "^3.0.4",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
