--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "knip": "^5.36.2",
     "node-sass": "^9.0.0",
     "npm-check": "^6.0.1",
-    "rimraf": "^3.0.2",
+    "rimraf": "3.0.2",
     "style-loader": "^3.3.3",
     "trash-cli": "^6.0.0",
     "ts-loader": "^9.5.1",
